Slider's answers limited to numerical technical names